[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "murdb"
version = "0.1.0"
description = "Secure database export tool with AES + RSA encryption"
authors = [{name = "femominal"}]
dependencies = [
    "requests",
]

[project.scripts]
murdb = "cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli*"]